# backdoor-nn-eval

./: .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
models/: model_cifar10.py  model_mnist.py
models/reference_cifar10/: evaluation_score.txt
models/reference_cifar10_2/: evaluation_score.txt
models/reference_cifar10_3/: evaluation_score.txt
models/reference_cifar10_4/: evaluation_score.txt
models/reference_cifar10_5/: evaluation_score.txt
models/reference_mnist/: evaluation_score.txt  mnist_reference.pt
models/reference_mnist_1/: evaluation_score.txt  mnist_bd.pt
models/reference_mnist_2/: evaluation_score.txt  mnist_bd.pt
models/reference_mnist_3/: evaluation_score.txt  mnist_bd.pt
models/reference_mnist_4/: evaluation_score.txt  mnist_bd.pt
models/reference_mnist_5/: evaluation_score.txt  mnist_bd.pt
notebooks/: daniel_testing.ipynb  februus.ipynb
output/neural_cleanse_experiment_20241029_041053_model1/: experiment_params.json
output/neural_cleanse_experiment_20241029_044058_model4/: experiment_params.json
output/neural_cleanse_experiment_20241029_050931_model5/: experiment_params.json
output/neural_cleanse_experiment_model1/: experiment_params.json
src/: anomaly_detection_by_reference.py  evaluate_model.py  grad_cam.py  l1_norm_median.py  load_dataset.py  load_model.py  main.py  neural_cleanse.py  neural_cleanse_2.py  neural_cleanse_by_unified_mask_with_log.py  predict_with_trigger.py  see_semantic.py  test_trigger_all_simple.py  test_trigger_by_unified_mask_with_log.py  train_reference_model.py
(+263 files in other folders)
