[tool.poetry]
name = "backdoor-nn-eval"
version = "0.1.0"
description = ""
authors = ["Daniel James <danieljames96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
matplotlib = "^3.9.2"
torchvision = "^0.20.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
